--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
-	# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.12
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.8
+loader_version=0.16.14
 
 # Mod Properties
-	mod_version = 1.2.4
-	maven_group = dev.neddslayer
-	archives_base_name = sharedhealth
+mod_version=1.2.4-1.21.4
+maven_group=dev.neddslayer
+archives_base_name=sharedhealth
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.119.9+1.21.5
-	cc_version = 6.3.0
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.119.2+1.21.4
+cc_version=6.2.2
 
